# fresh

./: .coverage  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-web.yml  mypy.yml  pr-review.yml  pytest.yml  release.yml
apps/cli/: package-lock.json  package.json
apps/web/: .gitignore  README.md  next.config.js  next.config.ts  package-lock.json  package.json  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: AGENT.md  AGENT_GUIDE.md  ARCHITECTURE.md  BACKLOG.md  BUSINESS.md  CACHE.md  CONCEPT.md  EXPLORE.md  GUIDES.md  PROJECT.md  README.md  REGISTRY.md  SPEC.md  SYNC.md  THEORETICAL.md  THEORY.md  V2_ARCHITECTURE.md  V2_EXCEPTIONS.md  agent-knowledge-system.md
docs/features/: FUTURE.md
src/fresh/: ui.py  (+8 more)
tests/: test_commands_alias.py  test_commands_doc.py  test_commands_get.py  test_commands_guide.py  test_commands_guide_management.py  test_commands_history.py  test_commands_index.py  test_commands_list.py  test_commands_search.py  test_commands_sync.py  test_commands_update.py  test_commands_websearch.py  test_config.py  test_console.py  test_core_config.py  test_core_sync.py  test_core_sync_entity.py  test_exceptions.py  test_history.py  test_indexer.py  test_main.py  test_scraper_crawler.py  test_scraper_filter.py  test_scraper_http.py  test_scraper_searcher.py  test_scraper_sitemap.py  test_scraper_websearch.py  test_scraper_websearch_integration.py  test_shutdown.py  test_ui.py
(+214 files in other folders)
