[project]
name = "fresh"
version = "0.1.0"
description = "CLI to get the latest and freshest documentation from any website in Markdown format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "typing-extensions>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fresh = "fresh.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
]
rich = [
    "rich>=13.0.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
